labs/kubernetes/007-ingress-404-503/evidence/04-broken-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{},"name":"ingress-demo","namespace":"incident-labs"},"spec":{"rules":[{"host":"demo.local","http":{"paths":[{"backend":{"service":{"name":"wrong-ingress-demo","port":{"number":80}}},"path":"/app","pathType":"Prefix"}]}}]}}
  creationTimestamp: "2026-07-13T08:33:42Z"
  generation: 1
  name: ingress-demo
  namespace: incident-labs
  resourceVersion: "37793"
  uid: 0c438554-62d6-492f-b71c-9d7520e88015
spec:
  rules:
  - host: demo.local
    http:
      paths:
      - backend:
          service:
            name: wrong-ingress-demo
            port:
              number: 80
        path: /app
        pathType: Prefix
status:
  loadBalancer: {}
